# basedcount_bot

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  admin.py  backupDrive.py  basedcount_bot.py  bot_commands.py  cheating.py  cheatingDatabase.json  commands.py  commentIndexer.ipynb  desktop.ini  flairs.py  lemmybot.py  logging.conf  logging_config.json  passwords.example.py  pre_push.py  pyproject.toml  ranks.example.py  ranks.py  requirements.in  requirements.txt  start.sh  utility_functions.py
.github/workflows/: pre-commit.yaml
backup_and_cheating/: back_up_and_cheating.py  backup_drive.py  delete_drive_files.py  helper_functions.py
data_dictionaries/: bot_replies.yaml
models/: flairs.py  pill.py  ranks.py  user.py
pythorhead/: lemmy.py  post.py
systemd_services/: basedcount_bot.service  basedcount_bot_backup.service  basedcount_bot_backup.timer
