[project]
name = "basedcount-bot"
version = "3.2.0"
description = "Reddit bot that keeps track of how often users of r/PoliticalCompassMemes use the term based or other variations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpraw>=7.8.1",
    "colorlog>=6.9.0",
    "google-api-python-client>=2.177.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "motor>=3.7.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "ujson>=5.10.0",
]

[dependency-groups]
lint = ["docstrfmt>=1.10.0", "ruff>=0.12.5"]
typing = [
    "mypy>=1.17.0",
    "types-aiofiles>=24.1.0.20250708",
    "types-pyyaml>=6.0.12.20250516",
    "types-ujson>=5.10.0.20250326",
]

[tool.mypy]
# Enable strict mode, which includes several strictness flags
strict = true

# Disallow dynamic typing
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

# Additional strictness settings
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 160

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
ignore = [
    "COM812", # Allow missing trailing comma. (handled by ruff format)
    "D203",   # Allow class doc strings without requiring a blank line before them (conflicts with D211).
    "D213",   # Allow multi-line docstring summaries to end on the first line (conflicts with D212).
    "D401",   # Allow docstring summaries that are not in imperative mood.
    "EM",     # Allow exception messages that do not follow specific formatting rules.
    "FBT",    # Allow functions to take boolean positional arguments.
    "S311",   # Allow use of Standard pseudo-random generators.
    "S603",   # Allow `subprocess` calls without enforcing `shell=False` (potential security risk).
    "T201",   # Allow usage of `print()` instead of enforcing logging.
    "TRY003", # Allow specifying long error messages inside the exception class instead of outside.
]
select = ["ALL"]
